turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value i
if(colors(i)==getCouleurSol()){n=i
          ^LangtonsAnt:5: error: not found: value i
if(colors(i)==getCouleurSol()){n=i
                                 ^LangtonsAnt:7: error: not found: value i
setCouleurBrosse(colors(i+1));
                        ^