turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
var n:Int=0
def step(rule:Array[Char], colors:Array[Color]) {
getCouleurSol();
if(colors(i)==getCouleurSol()){n=i
rule(n);
setCouleurBrosse(colors(i+1));
baisseBrosse();
leveBrosse();
}


}
